    * FIX: Removed double collect_hosts() call in activate changes hook
    * FIX: Fixed double hook execution when using localized multisite

    BI:
    * Great speed up of rule compilation in large environments

    Multisite:
    * Added css class="dashboard_<name>" to the dashboard div for easier
    customization of the dashboard style of a special dashboard
    * FIX: fixed localization of general permissions
    * FIX: show multisite warning messages even after page reload
    * FIX: fix bug in Age ValueSpec: days had been ignored
    * FIX: fixed bug showing only sidebar after re-login in multisite
    * FIX: fixed logwatch loosing the master_url parameter in distributed setups
    * FIX: Fixed doubled var "site" in view editor (site and siteopt filter)

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks
      are replaced with dummy checks always being OK
    * FIX: Precisely define order of reading of configuration files. This
      fixes a WATO rule precedence problem

    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT
    * ORACLE agent/checks: better error handling. Let SQL errors get
      through into check output, output sections even if no database
      is running.
    * oracle_version: new check outputting the version of an ORACLE
      database - and using uncached direct SQL output.
    * ORACLE agent: fix handling of EXCLUDE, new variable ONLY_SIDS
      for explicitely listing SIDs to monitor