@@ -79,6 +79,8 @@
     Multisite:
     * Added css class="dashboard_<name>" to the dashboard div for easier
     customization of the dashboard style of a special dashboard
+    * Sidebar: Sorting aggregation groups in BI snapin now
+    * Sidebar: Sorting sites in master control snapin case insensitive
     * FIX: fixed localization of general permissions
     * FIX: show multisite warning messages even after page reload
     * FIX: fix bug in Age ValueSpec: days had been ignored
